<resources>
    <string name="app_name">Battery Tracker</string>
    <string name="live_widget">Batarya Bilgileri</string>
    <string name="icon">icon</string>
    <string name="charge">Şarj</string>
    <string name="voltage">Voltaj</string>
    <string name="temperature">Sıcaklık</string>
    <string name="technology">Teknoloji</string>
    <string name="health">Pil Sağlığı</string>
    <string name="cycle">Döngü</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Anlık pil yüzdesi.</string>
    <string name="my_charge">ŞARJIM</string>
    <string name="widget_description">Şarj olma resmi</string>
    <string name="widget_renew_description">Widget ayarlarını yenile</string>
    <string name="widget_icon">Widget logosu</string>
</resources>